aws/eks/elp/cluster/ingress/nginx-web-0-ingress.yaml

# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-basic-app
  labels:
    app: basic-app
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Health Check Settings - todo: change healthcheck path
    alb.ingress.kubernetes.io/healthcheckx-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/force-ssl-redirect: "true"

    # SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:187446211909:certificate/6e431658-ad72-471b-bbb6-dd6957f63dc0,arn:aws:acm:eu-central-1:187446211909:certificate/bdd4aa86-aae0-471d-88de-d2d4301b51f5

    # SSL Redirect Setting
    ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - host: api.cnf.sh
      http:
        paths:
          - path: /* # SSL Redirect Setting
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation

          - path: /user/*
            backend:
              serviceName: user-service
              servicePort: 8082

          - path: /event/*
            backend:
              serviceName: event-service
              servicePort: 8083

          # ## todo: for testing only
          # - path: /eureka-service
          #   backend:
          #     serviceName: eureka-service
          #     servicePort: 8761
          # - path: /eureka-service/*
          #   backend:
          #     serviceName: eureka-service
          #     servicePort: 8761
          ## --------------------
          # - path: /*
          #   backend:
          #     serviceName: nginx
          #     servicePort: 80

    - host: cnf.sh
      http:
        paths:
          - path: /* # SSL Redirect Setting
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation

          - path: /auth
            backend:
              serviceName: elp-keycloak
              servicePort: 80
          - path: /auth/*
            backend:
              serviceName: elp-keycloak
              servicePort: 80

          - path: /*
            backend:
              serviceName: web-service
              servicePort: 80

    - host: www.cnf.sh
      http:
        paths:
          - path: /* # SSL Redirect Setting
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation

          - path: /auth
            backend:
              serviceName: elp-keycloak
              servicePort: 80
          - path: /auth/*
            backend:
              serviceName: elp-keycloak
              servicePort: 80

          - path: /*
            backend:
              serviceName: web-service
              servicePort: 80
